--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@ h1  {
 }
 .hassle1 {
   position:relative;
-  left:50px;
+  /*left:50px;*/
   width:90px;
   height:90px;
   /*margin-top:100px;*/
@@ -17,7 +17,7 @@ h1  {
 
 .hassle {
   position:relative;
-  left:50px;
+  /*left:50px;*/
   width:90px;
   height:90px;
   border:3px solid black;
@@ -39,11 +39,11 @@ h1  {
 
 }
 
-.knightRider {
+.knight {
   background-color: black;
   height:100px;
   border:3px solid red;
-  
+
 }
 
 /*.one {
