--- a/styles/main.css
+++ b/styles/main.css
@@ -7,17 +7,14 @@ h1  {
 }
 .hassle1 {
   position:relative;
-  /*left:50px;*/
   width:90px;
   height:90px;
-  /*margin-top:100px;*/
   border:3px solid black;
 
 }
 
 .hassle {
   position:relative;
-  /*left:50px;*/
   width:90px;
   height:90px;
   border:3px solid black;
@@ -46,176 +43,12 @@ h1  {
 
 }
 
-/*.one {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-  width: 40px;
-  height: 50px;
-display: none;
+.bayWin {
+  position: absolute;
+  height:200px;
+  width:200px;
+  color:blue;
+  margin-left:200px;
+  margin-top: 200px;
+  display:block;
 }
-.two {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.three {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.four {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.five {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.six {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.seven {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.eight {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.nine {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.ten {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.elev {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.twelve {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.thirt {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.fourt {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.fift {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.sixt {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.sevent {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.eighte {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.ninet {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.twent {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-
-
-.one1 {
-  display: none;
-
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-  width: 40px;
-  height: 50px;
-}
-.two2 {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.three3 {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.four4 {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.five {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.six {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.seven {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.eight {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.nine {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.ten {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.elev {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.twelve {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.thirt {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.fourt {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.fift {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.sixt {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.sevent {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.eighte {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.ninet {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-.twent {
-  background-image: url(http://www.canada.com/cms/binary/7525845.jpg);
-}
-
-
-th {
-  height:50px;
-  width: 60px;
-}*/
