--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,7 @@ body {
 
 h1  {
   color:red;
+  padding: 50px;
 }
 .hassle1 {
   position:relative;
@@ -32,23 +33,22 @@ h1  {
   background-color: black;
   height:100px;
   margin:20px 0 20px 0;
-  border:3px solid red;
+  border: 1px solid red;
 
 }
 
 .knight {
   background-color: black;
   height:100px;
-  border:3px solid red;
 
 }
 
 .bayWin {
   position: absolute;
-  height:200px;
-  width:200px;
-  color:blue;
+  height:500px;
+  width:1000px;
+  background-color: blue;
   margin-left:200px;
-  margin-top: 200px;
-  display:block;
+  display:hide;
+  z-index:9;
 }
